<resources>
    <string name="app_name">Goalkeeper</string>
    <string name="subtitle">Om al uw doelen te behalen!</string>
    <string name="login">Log hier in!</string>
    <string name="register">Registreer hier!</string>

    <string name="Email">E-mail</string>
    <string name="password">Wachtwoord</string>
    <string name="name">Naam</string>
    <string name="button_register">Registreer</string>
    <string name="button_back">Ga terug</string>
    <string name="login_button">Login</string>
    <string name="create_acc_button">Maak account</string>
    <string name="create_subject">Maak onderwerp!</string>
    <string name="subject_name">Onderwerp Naam</string>
    <string name="description">Beschrijving</string>
    <string name="finish_subject">Maak onderwerp</string>

    <string name="create_goal">Maak een doel!</string>
    <string name="goal_name">Doel naam</string>
    <string name="goal_endDate">Einddatum</string>
    <string name="goal_step">Hoevaak wil je dit voltooien?</string>
</resources>